# agentic-robot

./: .gitignore  AGENT.md  AGENT2.md  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
.github/: copilot-instructions.md
scripts/: autonomous.sh  setup-jetson.sh  test-motors.sh
src/: camera.rs  cli.rs  config.rs  daemon.rs  error.rs  history.rs  ipc.rs  lib.rs  main.rs  motor.rs  safety.rs  server.rs
static/: index.html
